--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
     <script>
       // Initialize Firebase
-      var config = {
+      const config = {
         apiKey: "AIzaSyCEPBanGHTkjmsQSaXwjxBU_awJ1G7t__0",
         authDomain: "vuejs-blog-2100a.firebaseapp.com",
         databaseURL: "https://vuejs-blog-2100a.firebaseio.com",
@@ -23,4 +23,17 @@
       firebase.initializeApp(config);
     </script>
   </body>
+  <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    const config = {
+      apiKey: "AIzaSyBxWOzMWjbjzZLRuUB3o3JiOAtbqRiVb6Y",
+      authDomain: "sarp-doruk-aslan-blog.firebaseapp.com",
+      databaseURL: "https://sarp-doruk-aslan-blog.firebaseio.com",
+      projectId: "sarp-doruk-aslan-blog",
+      storageBucket: "sarp-doruk-aslan-blog.appspot.com",
+      messagingSenderId: "613925141290"
+    };
+    firebase.initializeApp(config);
+  </script>
 </html>
