changed fibase codes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <script>
       // Initialize Firebase
       const config = {
-        apiKey: "AIzaSyCEPBanGHTkjmsQSaXwjxBU_awJ1G7t__0",
-        authDomain: "vuejs-blog-2100a.firebaseapp.com",
-        databaseURL: "https://vuejs-blog-2100a.firebaseio.com",
-        projectId: "vuejs-blog-2100a",
-        storageBucket: "vuejs-blog-2100a.appspot.com",
-        messagingSenderId: "801393695745"
+        apiKey: "AIzaSyBxWOzMWjbjzZLRuUB3o3JiOAtbqRiVb6Y",
+        authDomain: "sarp-doruk-aslan-blog.firebaseapp.com",
+        databaseURL: "https://sarp-doruk-aslan-blog.firebaseio.com",
+        projectId: "sarp-doruk-aslan-blog",
+        storageBucket: "sarp-doruk-aslan-blog.appspot.com",
+        messagingSenderId: "613925141290"
       };
       firebase.initializeApp(config);
     </script>
