--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.1.2/firebase.js"></script>
     <script>
       // Initialize Firebase
