Veriler Firebase üzerinden

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>blog</title>
+    <title>Sarp Doruk ASLAN - Blog</title>
   </head>
   <body>
     <div id="app"></div>
