--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Css Plugins -->
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.bootcss.com/summernote/0.8.1/summernote.css">
+
+    <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <title>Vue Blog</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
 
+    <!-- Js Plugins -->
     <script src="https://cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.js"></script>
     <script src="https://cdn.bootcss.com/summernote/0.8.1/summernote.js"></script>
